fixing layout overflow

--- a/src/index.css
+++ b/src/index.css
@@ -27,8 +27,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 html, body {
-  max-width: 100%;
-  overflow-x: hidden !important;
+  width: 100%;
+}
+
+body {
+  overflow-x: hidden;
 }
 
 img {
